fixed colors for contrast on links

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -27,3 +27,7 @@
 .contrast {
   color: #007cc0;
 }
+
+.links {
+  color: #006ca8;
+}
